# OG-Injector-Linux

./: .gitignore  CMakeLists.txt  CMakeSettings.json  OG-Injector-Linux.cpp  OG-Injector-Linux.hpp  OG-Injector-Linux.sln  OG-Injector-Linux.vcxproj  OG-Injector-Linux.vcxproj.filters
.github/workflows/: cmake.yml
OG-Injector-Lib/: OG-Injector-Lib-internal.hpp  OG-Injector-Lib.cpp  OG-Injector-Lib.hpp  elf.cpp  ptrace.cpp  remote_call.cpp  util.cpp
